Fixed a layout bug in the verification

--- a/src/theme/components/_verification.scss
+++ b/src/theme/components/_verification.scss
@@ -1,5 +1,6 @@
 .verification {
     justify-content: center;
+    overflow: hidden;
 
     label {
         margin: 0;
